Started adding a rack. Current aim: Get tile drag and drop working.

--- a/liscrabble.cabal
+++ b/liscrabble.cabal
@@ -23,6 +23,7 @@ library
                      Handler.Common
                      Handler.Home
                      Widgets.Board.Board
+                     Widgets.Game.Rack
 
     if flag(dev) || flag(library-only)
         cpp-options:   -DDEVELOPMENT
