--- a/liscrabble.cabal
+++ b/liscrabble.cabal
@@ -24,7 +24,7 @@ library
                      Handler.Home
                      Widgets.Game.Rack
                      Widgets.Board.Board
-                     Widgets.Game.MoveList
+                     Widgets.Game.ScoreBoard
                      Widgets.Game.TestGame
 
     if flag(dev) || flag(library-only)
