Started adding chat box.

--- a/liscrabble.cabal
+++ b/liscrabble.cabal
@@ -24,6 +24,7 @@ library
                      Handler.Home
                      Widgets.Game.Rack
                      Widgets.Board.Board
+                     Widgets.Game.ChatBox
                      Widgets.Game.ScoreBoard
                      Widgets.Game.TestGame
 
