--- a/liscrabble.cabal
+++ b/liscrabble.cabal
@@ -22,6 +22,7 @@ library
                      Settings.StaticFiles
                      Handler.Common
                      Handler.Home
+                     Handler.Game
                      Widgets.Game.Rack
                      Widgets.Board.Board
                      Widgets.Game.ChatBox
