--- a/liscrabble.cabal
+++ b/liscrabble.cabal
@@ -58,6 +58,7 @@ library
                  , yesod-auth                    >= 1.4.0      && < 1.5
                  , yesod-static                  >= 1.4.0.3    && < 1.5
                  , yesod-form                    >= 1.4.0      && < 1.5
+                 , yesod-websockets              >= 0.2        && < 1.0
                  , classy-prelude                >= 0.10.2
                  , classy-prelude-conduit        >= 0.10.2
                  , classy-prelude-yesod          >= 0.10.2
@@ -91,6 +92,8 @@ library
                  , split > 0.2 && <= 0.3
                  , filepath
                  , semigroups
+                 , transformers
+                 , conduit-combinators
 
 executable         liscrabble
     if flag(library-only)
