Wrote websocket server message for creating a game invite lobby.

--- a/liscrabble.cabal
+++ b/liscrabble.cabal
@@ -25,6 +25,7 @@ library
                      Handler.Common
                      Handler.Home
                      Handler.Game
+                     Model.Api
                      Model.ServerGame
                      Model.ServerPlayer
                      Widgets.Game.Board
