Removing nickname supplied from the response. It was a silly idea :P

--- a/liscrabble.cabal
+++ b/liscrabble.cabal
@@ -102,6 +102,7 @@ library
                  , conduit-combinators
                  , mime-mail
                  , random
+                 , cookie
 
 executable         liscrabble
     if flag(library-only)
