Started adding code to create a new game.

--- a/liscrabble.cabal
+++ b/liscrabble.cabal
@@ -103,6 +103,8 @@ library
                  , mime-mail
                  , random
                  , cookie
+                 , errors
+                 , either
 
 executable         liscrabble
     if flag(library-only)
