--- a/liscrabble.cabal
+++ b/liscrabble.cabal
@@ -20,14 +20,15 @@ library
                      Model
                      Settings
                      Settings.StaticFiles
+                     Controllers.Game.Model.GameLobby
+                     Controllers.Game.Model.ServerGame
+                     Controllers.Game.Model.ServerPlayer
                      Controllers.Game.Game
                      Controllers.Game.Api
                      Handler.Common
                      Handler.Home
                      Handler.Game
                      Model.Api
-                     Model.ServerGame
-                     Model.ServerPlayer
                      Widgets.Game.Board
                      Widgets.Game.ChatBox
                      Widgets.Game.Game
