Clean up thread reading from message channel when the client ends the connection.

--- a/liscrabble.cabal
+++ b/liscrabble.cabal
@@ -113,6 +113,7 @@ library
                  , either
                  , stm
                  , websockets
+                 , monad-loops
 
 executable         liscrabble
     if flag(library-only)
