Keep track of the summaries of the moves made to add to the move list.

--- a/liscrabble.cabal
+++ b/liscrabble.cabal
@@ -21,6 +21,7 @@ library
                      Settings
                      Settings.StaticFiles
                      Controllers.Game.Model.GameLobby
+                     Controllers.Game.Model.MoveSummary
                      Controllers.Game.Model.ServerGame
                      Controllers.Game.Model.ServerPlayer
                      Controllers.Game.Game
