--- a/ui/round/package.json
+++ b/ui/round/package.json
@@ -4,6 +4,7 @@
     "description" : "A game round in the web application.",
     "main" : "src/main.js",
     "devDependencies": {
+        "scrabbleGround" :"github:happy0/scrabbleground",
         "browserify": "~9.0.8",
         "watchify" : "3.1.1",
         "gulp": "~3.9.0",
