--- a/ui/round/package.json
+++ b/ui/round/package.json
@@ -4,7 +4,6 @@
     "description" : "A game round in the web application.",
     "main" : "src/main.js",
     "devDependencies": {
-        "scrabbleGround" :"github:happy0/scrabbleground",
         "browserify": "~9.0.8",
         "watchify" : "3.1.1",
         "gulp": "~3.9.0",
@@ -12,7 +11,8 @@
         "vinyl-source-stream": "~1.1.0"
     },
     "dependencies" : {
-        "mithril" : "0.2.0"
+        "mithril" : "0.2.0",
+        "scrabbleground" :"github:happy0/scrabbleground"
     },
     "author" : "Gordon Martin (https://github.com/happy0)"
 }
