--- a/liscrabble.cabal
+++ b/liscrabble.cabal
@@ -97,6 +97,8 @@ library
                  , vector
                  , time
                  , haskellscrabble >= 1.3.3
+                 , suspend
+                 , timers
                  , split > 0.2 && <= 0.3
                  , filepath
                  , semigroups
