--- a/liscrabble.cabal
+++ b/liscrabble.cabal
@@ -95,7 +95,7 @@ library
                  , containers
                  , vector
                  , time
-                 , haskellscrabble >= 1.4.3
+                 , haskellscrabble >= 2.0.1 && < 3.0.0
                  , suspend
                  , timers
                  , split > 0.2 && <= 0.3
