--- a/liscrabble.cabal
+++ b/liscrabble.cabal
@@ -112,6 +112,7 @@ library
                  , websockets
                  , monad-loops
                  , resource-pool
+                 , resourcet
 
 executable         liscrabble
     if flag(library-only)
