--- a/liscrabble.cabal
+++ b/liscrabble.cabal
@@ -113,6 +113,7 @@ library
                  , monad-loops
                  , resource-pool
                  , resourcet
+                 , mtl >= 2.2.1 && < 2.3
 
 executable         liscrabble
     if flag(library-only)
