--- a/config/keter.yml
+++ b/config/keter.yml
@@ -12,7 +12,11 @@ stanzas:
 
     # Name of your executable. You are unlikely to need to change this.
     # Note that all file paths are relative to the keter.yml file.
-    exec: ../dist/build/liscrabble/liscrabble
+    #
+    # The path given is for Stack projects. If you're still using cabal, change
+    # to
+    # exec: ../dist/build/wordify-webapp/wordify-webapp
+    exec: ../dist/bin/wordify-webapp
 
     # Command line options passed to your application.
     args: []
@@ -21,7 +25,7 @@ stanzas:
       # You can specify one or more hostnames for your application to respond
       # to. The primary hostname will be used for generating your application
       # root.
-      - www.liscrabble.com
+      - www.wordify-webapp.com
 
     # Enable to force Keter to redirect to https
     # Can be added to any stanza
@@ -30,7 +34,7 @@ stanzas:
   # Static files.
   - type: static-files
     hosts:
-      - static.liscrabble.com
+      - static.wordify-webapp.com
     root: ../static
 
     # Uncomment to turn on directory listings.
@@ -40,9 +44,9 @@ stanzas:
   - type: redirect
 
     hosts:
-      - liscrabble.com
+      - wordify-webapp.com
     actions:
-      - host: www.liscrabble.com
+      - host: www.wordify-webapp.com
         # secure: false
         # port: 80
 
@@ -51,7 +55,13 @@ stanzas:
 
 # Use the following to automatically copy your bundle upon creation via `yesod
 # keter`. Uses `scp` internally, so you can set it to a remote destination
-# copy-to: user@host:/opt/keter/incoming
+# copy-to: user@host:/opt/keter/incoming/
+
+# You can pass arguments to `scp` used above. This example limits bandwidth to
+# 1024 Kbit/s and uses port 2222 instead of the default 22
+# copy-to-args:
+#   - "-l 1024"
+#   - "-P 2222"
 
 # If you would like to have Keter automatically create a PostgreSQL database
 # and set appropriate environment variables for it to be discovered, uncomment
