--- a/config/settings.yml
+++ b/config/settings.yml
@@ -1,25 +1,37 @@
-# Values formatted like "_env:ENV_VAR_NAME:default_value" can be overridden by the specified environment variable.
+# Values formatted like "_env:YESOD_ENV_VAR_NAME:default_value" can be overridden by the specified environment variable.
 # See https://github.com/yesodweb/yesod/wiki/Configuration#overriding-configuration-values-with-environment-variables
 
-static-dir:     "_env:STATIC_DIR:static"
-host:           "_env:HOST:*4" # any IPv4 host
-port:           "_env:PORT:3000"
-approot:        "_env:APPROOT:http://localhost:3000"
-ip-from-header: "_env:IP_FROM_HEADER:false"
+static-dir:     "_env:YESOD_STATIC_DIR:static"
+host:           "_env:YESOD_HOST:*4" # any IPv4 host
+port:           "_env:YESOD_PORT:3000" # NB: The port `yesod devel` uses is distinct from this value. Set the `yesod devel` port from the command line.
+ip-from-header: "_env:YESOD_IP_FROM_HEADER:false"
+
+# Default behavior: determine the application root from the request headers.
+# Uncomment to set an explicit approot
+#approot:        "_env:YESOD_APPROOT:http://localhost:3000"
+
+# By default, `yesod devel` runs in development, and built executables use
+# production settings (see below). To override this, use the following:
+#
+# development: false
 
 # Optional values with the following production defaults.
 # In development, they default to the inverse.
 #
-# development: false
 # detailed-logging: false
 # should-log-all: false
 # reload-templates: false
 # mutable-static: false
 # skip-combining: false
+# auth-dummy-login : false
+
+# NB: If you need a numeric value (e.g. 123) to parse as a String, wrap it in single quotes (e.g. "_env:YESOD_PGPASS:'123'")
+# See https://github.com/yesodweb/yesod/wiki/Configuration#parsing-numeric-values-as-strings
 
 database:
-  database: "_env:SQLITE_DATABASE:liscrabble.sqlite3"
-  poolsize: "_env:SQLITE_POOLSIZE:10"
+  # See config/test-settings.yml for an override during tests
+  database: "_env:YESOD_SQLITE_DATABASE:wordify-webapp.sqlite3"
+  poolsize: "_env:YESOD_SQLITE_POOLSIZE:10"
 
 copyright: Insert copyright statement here
 #analytics: UA-YOURCODE
