--- a/ui/round/package.json
+++ b/ui/round/package.json
@@ -1,18 +1,18 @@
 {
-    "name" : "round",
-    "version" : "0.0.1",
-    "description" : "A game round in the web application.",
-    "main" : "src/main.js",
+    "name": "round",
+    "version": "0.0.1",
+    "description": "A game round in the web application.",
+    "main": "src/main.js",
     "devDependencies": {
         "browserify": "~9.0.8",
-        "watchify" : "3.1.1",
-        "gulp": "~3.9.0",
+        "gulp": "^3.9.1",
         "gulp-util": "~3.0.4",
-        "vinyl-source-stream": "~1.1.0"
+        "vinyl-source-stream": "~1.1.0",
+        "watchify": "3.1.1"
     },
-    "dependencies" : {
-        "mithril" : "0.2.0",
-        "scrabbleground" :"github:happy0/scrabbleground"
+    "dependencies": {
+        "mithril": "0.2.0",
+        "scrabbleground": "github:happy0/scrabbleground"
     },
-    "author" : "Gordon Martin (https://github.com/happy0)"
+    "author": "Gordon Martin (https://github.com/happy0)"
 }
