Fix non-exhaustive pattern match bug.

--- a/package.yaml
+++ b/package.yaml
@@ -68,6 +68,7 @@ dependencies:
 - mtl
 - wordify
 - yesod-websockets
+- random-shuffle
 
 # The library contains all of our application code. The executable
 # defined below is just a thin wrapper.
