--- a/package.yaml
+++ b/package.yaml
@@ -9,6 +9,7 @@ dependencies:
 - yesod-auth >=1.6 && <1.7
 - yesod-static >=1.6 && <1.7
 - yesod-form >=1.6 && <1.7
+- yesod-auth-oauth2 >= 0.6.1.1 && < 0.6.2.0
 - classy-prelude >=1.5 && <1.6
 - classy-prelude-conduit >=1.5 && <1.6
 - classy-prelude-yesod >=1.5 && <1.6
