Put more oauth config in environment variables.

--- a/package.yaml
+++ b/package.yaml
@@ -70,6 +70,7 @@ dependencies:
 - wordify
 - yesod-websockets
 - random-shuffle
+- uri-bytestring
 
 # The library contains all of our application code. The executable
 # defined below is just a thin wrapper.
