--- a/stack.yaml
+++ b/stack.yaml
@@ -19,6 +19,9 @@
 # resolver: https://example.com/snapshots/2018-01-01.yaml
 resolver: lts-13.24
 
+docker:
+  enable: true
+
 # User packages to be built.
 # Various formats can be used as shown in the example below.
 #
