--- a/package.yaml
+++ b/package.yaml
@@ -1,94 +1,94 @@
-name:    wordify-webapp
+name: wordify-webapp
 version: "0.0.0"
 
 dependencies:
-
-- base >=4.9.1.0 && <5
-- yesod >=1.6 && <1.7
-- yesod-core >=1.6 && <1.7
-- yesod-auth >=1.6 && <1.7
-- yesod-static >=1.6 && <1.7
-- yesod-form >=1.6 && <1.7
-- yesod-auth-oauth2 >= 0.6.1.1 && < 0.6.2.0
-- classy-prelude >=1.5 && <1.6
-- classy-prelude-conduit >=1.5 && <1.6
-- classy-prelude-yesod >=1.5 && <1.6
-- bytestring >=0.10 && <0.11
-- text >=0.11 && <2.0
-- persistent >=2.9 && <2.10
-- persistent-sqlite >=2.9 && <2.10
-- persistent-template >=2.5 && <2.9
-- template-haskell
-- shakespeare >=2.0 && <2.1
-- hjsmin >=0.1 && <0.3
-- monad-control >=0.3 && <1.1
-- wai-extra >=3.0 && <3.1
-- yaml >=0.11 && <0.12
-- http-client-tls >=0.3 && <0.4
-- http-conduit >=2.3 && <2.4
-- directory >=1.1 && <1.4
-- warp >=3.0 && <3.3
-- data-default
-- aeson >=1.4 && <1.5
-- conduit >=1.0 && <2.0
-- monad-logger >=0.3 && <0.4
-- fast-logger >=2.2 && <2.5
-- wai-logger >=2.2 && <2.4
-- file-embed
-- safe
-- unordered-containers
-- containers
-- vector
-- time
-- case-insensitive
-- wai
-- foreign-store
-- websockets
-- file-embed
-- safe
-- listsafe
-- unordered-containers
-- containers
-- vector
-- time
-- suspend
-- timers
-- split
-- filepath
-- semigroups
-- transformers
-- conduit-combinators
-- mime-mail
-- random
-- cookie
-- errors
-- stm
-- monad-loops
-- resource-pool
-- resourcet
-- mtl
-- wordify
-- yesod-websockets
-- random-shuffle
-- uri-bytestring
+  - base >=4.9.1.0 && <5
+  - yesod >=1.6 && <1.7
+  - yesod-core >=1.6 && <1.7
+  - yesod-auth >=1.6 && <1.7
+  - yesod-static >=1.6 && <1.7
+  - yesod-form >=1.6 && <1.7
+  - yesod-auth-oauth2 >= 0.6.1.1 && < 0.6.2.0
+  - classy-prelude >=1.5 && <1.6
+  - classy-prelude-conduit >=1.5 && <1.6
+  - classy-prelude-yesod >=1.5 && <1.6
+  - bytestring >=0.10 && <0.11
+  - text >=0.11 && <2.0
+  - persistent >=2.9 && <2.10
+  - persistent-sqlite >=2.9 && <2.10
+  - persistent-template >=2.5 && <2.9
+  - template-haskell
+  - shakespeare >=2.0 && <2.1
+  - hjsmin >=0.1 && <0.3
+  - monad-control >=0.3 && <1.1
+  - wai-extra >=3.0 && <3.1
+  - yaml >=0.11 && <0.12
+  - http-client-tls >=0.3 && <0.4
+  - http-conduit >=2.3 && <2.4
+  - directory >=1.1 && <1.4
+  - warp >=3.0 && <3.3
+  - data-default
+  - aeson >=1.4 && <1.5
+  - conduit >=1.0 && <2.0
+  - monad-logger >=0.3 && <0.4
+  - fast-logger >=2.2 && <2.5
+  - wai-logger >=2.2 && <2.4
+  - file-embed
+  - safe
+  - unordered-containers
+  - containers
+  - vector
+  - time
+  - case-insensitive
+  - wai
+  - foreign-store
+  - websockets
+  - file-embed
+  - safe
+  - listsafe
+  - unordered-containers
+  - containers
+  - vector
+  - time
+  - suspend
+  - timers
+  - split
+  - filepath
+  - semigroups
+  - transformers
+  - conduit-combinators
+  - mime-mail
+  - random
+  - cookie
+  - errors
+  - stm
+  - monad-loops
+  - resource-pool
+  - resourcet
+  - mtl
+  - wordify
+  - yesod-websockets
+  - random-shuffle
+  - uri-bytestring
+  - esqueleto
 
 # The library contains all of our application code. The executable
 # defined below is just a thin wrapper.
 library:
   source-dirs: src
   when:
-  - condition: (flag(dev)) || (flag(library-only))
-    then:
-      ghc-options:
-      - -Wall
-      - -fwarn-tabs
-      - -O0
-      cpp-options: -DDEVELOPMENT
-    else:
-      ghc-options:
-      - -Wall
-      - -fwarn-tabs
-      - -O2
+    - condition: (flag(dev)) || (flag(library-only))
+      then:
+        ghc-options:
+          - -Wall
+          - -fwarn-tabs
+          - -O0
+        cpp-options: -DDEVELOPMENT
+      else:
+        ghc-options:
+          - -Wall
+          - -fwarn-tabs
+          - -O2
 
 # Runnable executable for our application
 executables:
@@ -96,14 +96,14 @@ executables:
     main: main.hs
     source-dirs: app
     ghc-options:
-    - -threaded
-    - -rtsopts
-    - -with-rtsopts=-N
+      - -threaded
+      - -rtsopts
+      - -with-rtsopts=-N
     dependencies:
-    - wordify-webapp
+      - wordify-webapp
     when:
-    - condition: flag(library-only)
-      buildable: false
+      - condition: flag(library-only)
+        buildable: false
 
 # Test suite
 tests:
@@ -112,10 +112,10 @@ tests:
     source-dirs: test
     ghc-options: -Wall
     dependencies:
-    - wordify-webapp
-    - hspec >=2.0.0
-    - yesod-test
-    - microlens
+      - wordify-webapp
+      - hspec >=2.0.0
+      - yesod-test
+      - microlens
 
 # Define flags used by "yesod devel" to make compilation faster
 flags:
@@ -128,8 +128,7 @@ flags:
     manual: false
     default: false
 
-default-extensions:
-  TemplateHaskell
+default-extensions: TemplateHaskell
   QuasiQuotes
   OverloadedStrings
   NoImplicitPrelude
