Fix issue with max-height not working on firefox.

--- a/ui/round/package.json
+++ b/ui/round/package.json
@@ -3,6 +3,9 @@
     "version": "0.0.1",
     "description": "A game round in the web application.",
     "main": "src/main.js",
+    "overrides": {
+        "graceful-fs": "^4.2.11"
+    },
     "devDependencies": {
         "browserify": "~9.0.8",
         "gulp": "^3.9.1",
