--- a/package.yaml
+++ b/package.yaml
@@ -71,6 +71,7 @@ dependencies:
   - random-shuffle
   - uri-bytestring
   - esqueleto
+  - splitmix
 
 # The library contains all of our application code. The executable
 # defined below is just a thin wrapper.
