--- a/package.yaml
+++ b/package.yaml
@@ -75,6 +75,7 @@ dependencies:
   - stm-containers
   - foldl
   - deferred-folds
+  - wreq
 
 # The library contains all of our application code. The executable
 # defined below is just a thin wrapper.
