--- a/package.yaml
+++ b/package.yaml
@@ -76,6 +76,7 @@ dependencies:
   - foldl
   - deferred-folds
   - req
+  - async
 
 # The library contains all of our application code. The executable
 # defined below is just a thin wrapper.
