Start making it possible to request definitions for word (nothing stored yet) (#44)

--- a/package.yaml
+++ b/package.yaml
@@ -75,6 +75,8 @@ dependencies:
   - stm-containers
   - foldl
   - deferred-folds
+  - req
+  - async
 
 # The library contains all of our application code. The executable
 # defined below is just a thin wrapper.
