--- a/package.yaml
+++ b/package.yaml
@@ -77,6 +77,8 @@ dependencies:
   - deferred-folds
   - req
   - async
+  - base16-bytestring
+  - crypton
 
 # The library contains all of our application code. The executable
 # defined below is just a thin wrapper.
