--- a/package.yaml
+++ b/package.yaml
@@ -79,6 +79,7 @@ dependencies:
   - async
   - base16-bytestring
   - crypton
+  - tagsoup
 
 # The library contains all of our application code. The executable
 # defined below is just a thin wrapper.
