--- a/.dockerignore
+++ b/.dockerignore
@@ -23,3 +23,14 @@
 **/wordify-webapp.cabal
 **/ui/node_modules
 fly.toml
+
+# Additional excludes for faster builds
+.git
+.github
+*.md
+README*
+LICENSE*
+Makefile
+**/*.log
+**/bin
+stack.yaml.lock
