Fix docker caching and make tweak to how names are displayed under miniboard.

--- a/.dockerignore
+++ b/.dockerignore
@@ -20,6 +20,9 @@
 **/*.keter
 **/*~
 **/\#*
+# Exclude UI build outputs so changes don't invalidate the backend Docker cache
+static/js
+static/css
 **/wordify-webapp.cabal
 **/node_modules
 fly.toml
