Start adding front end stuff for push notifications.

--- a/ui/wordify-views/tsconfig.app.json
+++ b/ui/wordify-views/tsconfig.app.json
@@ -16,5 +16,6 @@
     "noFallthroughCasesInSwitch": true,
     "noUncheckedSideEffectImports": true
   },
-  "include": ["src/**/*.ts", "src/**/*.tsx", "src/**/*.vue"]
+  "include": ["src/**/*.ts", "src/**/*.tsx", "src/**/*.vue"],
+  "exclude": ["src/sw.ts"]
 }
