--- a/ui/wordify-views/package.json
+++ b/ui/wordify-views/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vue-tsc -b && vite build",
+    "build": "vue-tsc -b && vite build && vite build --config vite.config.sw.ts",
     "build:lib": "vue-tsc -b && vite build",
     "preview": "vite preview",
     "serve": "npx serve ."
