--- a/stack.yaml
+++ b/stack.yaml
@@ -38,6 +38,7 @@ docker:
 #  - wai
 packages:
   - .
+  - vendor/web-push
 # Dependency packages to be pulled from upstream that are not in the resolver
 # using the same syntax as the packages field.
 # (e.g., acme-missiles-0.3)
