--- a/config/settings.yml
+++ b/config/settings.yml
@@ -7,7 +7,7 @@ port:           "_env:YESOD_PORT:3000" # NB: The port `yesod devel` uses is dist
 ip-from-header: "_env:YESOD_IP_FROM_HEADER:false"
 
 # Determine the application root from the YESOD_APPROOT env var, or from request headers if not set.
-approot:        "_env:YESOD_APPROOT"
+# approot:        "_env:YESOD_APPROOT"
 
 # By default, `yesod devel` runs in development, and built executables use
 # production settings (see below). To override this, use the following:
