--- a/ui/wordify-views/package.json
+++ b/ui/wordify-views/package.json
@@ -8,7 +8,8 @@
     "build": "vue-tsc -b && vite build && vite build --config vite.config.sw.ts",
     "build:lib": "vue-tsc -b && vite build",
     "preview": "vite preview",
-    "serve": "npx serve ."
+    "serve": "npx serve .",
+    "devWithRemote": "node dev-server/server.js"
   },
   "dependencies": {
     "@primeuix/themes": "^2.0.2",
@@ -23,6 +24,8 @@
     "@types/node": "^24.10.1",
     "@vitejs/plugin-vue": "^6.0.1",
     "@vue/tsconfig": "^0.8.1",
+    "express": "^5.2.1",
+    "http-proxy-middleware": "^3.0.5",
     "typescript": "~5.9.3",
     "vite": "^7.2.4",
     "vue-tsc": "^3.1.4"
